# llm_notepad

./: .gitignore  AGENTS.md  db.py  docker-compose.yaml  main.py  pyproject.toml  test_main.http
data/: DeleteProblemResponse.py  Problem.py  ProblemRecord.py  ProblemReviewRecord.py  ProblemReviewState.py  ReviewFeedbackRequest.py  ReviewRating.py  ReviewRecommendationResponse.py  StudyChatEvent.py  StudyChatRequest.py  UploadRequest.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/upload/: route.ts
frontend/app/problems/: page.tsx
frontend/app/review/: page.tsx
frontend/app/study/: page.tsx
frontend/app/study/[problemId]/: page.tsx
frontend/components/: app-shell.tsx  math-text.tsx  problem-list-page.tsx  review-page.tsx  study-page.tsx  upload-workspace.tsx
frontend/lib/: problem-store.ts  problems-api.ts  review-api.ts  study-api.ts  types.ts
