[project]
name = "llm-notepad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "fastapi>=0.136.0",
    "openai>=2.0.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.13.2",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.44.0",
]
